--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="hero" class="flex flex-col md:flex-row justify-center items-center gap-12 md:gap-20 px-8 min-h-[80vh]">
       <div class="w-64 h-64 md:w-80 md:h-80">
-        <img src="D:\codingan\anangfathh.github.io\assets\3df6614b-03bb-4051-89b7-502eef8df841.png" alt="My Profile Picture" class="rounded-full w-full h-full object-cover shadow-lg" />
+        <img src=".\assets\3df6614b-03bb-4051-89b7-502eef8df841.png" alt="My Profile Picture" class="rounded-full w-full h-full object-cover shadow-lg" />
       </div>
       <div class="text-center">
         <p class="font-semibold text-gray-600 dark:text-gray-400">Hello, I'm</p>
@@ -96,7 +96,7 @@
       <h1 class="text-center text-4xl md:text-5xl font-bold">About Me</h1>
       <div class="flex flex-col lg:flex-row items-center justify-center gap-12 md:gap-16 mt-12">
         <div class="w-64 h-64 md:w-80 md:h-80 flex-shrink-0">
-          <img src="D:\codingan\anangfathh.github.io\assets\20231210_113931.jpg" alt="Profile Picture" class="rounded-3xl w-full h-full object-cover shadow-lg" />
+          <img src=".\assets\20231210_113931.jpg" alt="Profile Picture" class="rounded-3xl w-full h-full object-cover shadow-lg" />
         </div>
         <div class="max-w-2xl text-center lg:text-left">
           <div class="flex flex-col md:flex-row gap-8 mb-8">
